html-добавлен блок "pagination" - три активных кружка переключение слайдера . css-добалены стили .

--- a/test-index.html
+++ b/test-index.html
@@ -21,5 +21,9 @@
     <br>
     <a href="./home-page/home-page.html" class="btn-circle"><img src="./img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"></a>
     <!-- class="btn-circle" -->
+    <!-- <img src="./img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"> -->
+    <div class="pagination">
+        <a href="#" class="circle"></a><a href="#" class="circle circle-active"></a><a href="#" class="circle"></a>
+    </div>
 </body>
 </html>
