--- a/test-index.html
+++ b/test-index.html
@@ -24,6 +24,7 @@
     <!-- <img src="./img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"> -->
     <div class="pagination">
         <a href="#" class="circle"></a><a href="#" class="circle circle-active"></a><a href="#" class="circle"></a>
-    </div>
+    </div><br>
+    <hr>
 </body>
 </html>
