--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css/style.css">
     <link rel="stylesheet" href="./footer-all.css/footer-all.css">
+    <link rel="stylesheet" href="./1button.css/dutton.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -31,12 +32,15 @@
                 <h2 class="slider-h2">Fishnet Chair</h2>
                 <p class="slider-content">Seat and back with upholstery made of cold cure foam.
                    Steel frame, available in matt powder-coated black .</p>
-                <a href="./home-page/home-page.html" class="button ">Order Us <i class="arrow right promo-i"></i></a>
+                <a href="./home-page/home-page.html" class="btn-white">Order Us <img src="./img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"></a>
             </div>
 
-          <div class="pagination">
+          <!-- <div class="pagination">
               <a href="#" class="circle"></a><a href="#" class="circle circle-active"></a><a href="#" class="circle"></a>
-          </div>  
+          </div>   -->
+          <div class="pagination">
+                <a href="#" class="circle"></a><a href="#" class="circle circle-active"></a><a href="#" class="circle"></a>
+            </div>
                  
         </div>
         <!-- 2 -->
@@ -47,14 +51,16 @@
                 <li class="menu-list-featured menu-list-featured-passive"><a href="./our-products-range/our-products-range.html"><p>New</p></a></li>
             </ul>
 
-             <a href="./our-products-range/our-products-range.html"><p class="explore-all">explore all <i class="arrow right"></i></p></a>
+             <!-- <p href="./our-products-range/our-products-range.html"><p class="explore-all">explore all <i class="arrow right"></i></p></a> -->
+             <a href="#"><p class="btn-explore-all explore-all-location">explore all <img src="./img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"></p></a>
 
             <div class="fishnet-chair2">
                 <!-- <img src="../img/product-1.svg" alt=""> -->
            </div>
 
            <div class="fishnet-chair">
-               <a href="./home-page/home-page.html" type="button" class="btn-circle"><i class="arrow right"></i></a>
+               <!-- <a href="./home-page/home-page.html" type="button" class="btn-circle"></a> -->
+               <a href="./home-page/home-page.html" class="btn-circle btn-circle-location"><img src="../img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"></a>
                <p>Fishnet Chair</p>
                <p class="fishnet-chair-content">Seat and back with upholstery<br>
                 made of cold cure foam</p>
@@ -71,18 +77,21 @@
             <p class="promo-exclusive-text">exclusive</p>
             <p class="promo-text">Fishnet Chair</p>
             <p class="promo-content-text">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
-            <a href="./home-page/home-page.html" type="button" class="button promo-btn"><p>Order Us <i class="arrow right promo-i"></i></p></a>
+            <!-- <p href="./home-page/home-page.html" type="button" class="button promo-btn"><p>Order Us <i class="arrow right promo-i"></i></p></a> -->
+            <a href="#" class="btn-white promo-btn">Order Us <img src="../img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"></a>
         </div>
         <div class="promo1-fishnet-chair">
             <p class="promo-exclusive-text">exclusive</p>
             <p class="promo-text">Fishnet Chair</p>
             <p class="promo-content-text">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
-            <a href="./home-page/home-page.html" type="button" class="button promo-btn"><p>Order Us <i class="arrow right promo-i"></i></p></a>
+            <!-- <p href="./home-page/home-page.html" type="button" class="button promo-btn"><p>Order Us <i class="arrow right promo-i"></i></p></a> -->
+            <a href="#" class="btn-white promo-btn">Order Us <img src="../img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"></a>
         </div>
         <!--4-->
         <div class="trending-products">
             <p class="trending-products-text">Trending Products</p>
-            <a href="#"><p class="explore-all-trial">explore all <i class="arrow right promo-i"></i></p></a>
+            <!-- <p href="#"><p class="explore-all-trial">explore all <i class="arrow right promo-i"></i></p></a> -->
+            <a href="#"><p class="btn-explore-all explore-all-location">explore all <img src="./img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"></p></a>
             <img src="./img/product-11.svg" alt="" class="trending-products11-img">
             <img src="./img/product-21.svg" alt="" class="trending-products21-img">
             <img src="./img/product-31.svg" alt="" class="trending-products31-img">
@@ -96,7 +105,8 @@
                <p class="slider-hot-header">Hot deal</p>
                <p class="slider-hot-bigtext">Fishnet Chair</p>
                <p class="slider-hot-smalltext">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black.</p>
-               <a href="#" type="button" class="slider-hot-btn button">Order Us <i class="arrow right promo-i"></i></a>             
+               <!-- <i href="#" type="button" class="slider-hot-btn button">Order Us <i class="arrow right promo-i"></i></a> -->
+               <a href="#" class="btn-white btn-hot-deal-location">Order Us <img src="../img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"></a>
             </div>
             <div class="slider-hot-pagination">
                <a href="#" class="circle"></a><a href="#" class="circle circle-active"></a><a href="#" class="circle"></a>
@@ -110,7 +120,8 @@
                     <p class="exclusive-second-header">exclusive</p>
                     <p class="exclusive-second-bigtext">Fishnet Chair</p>
                     <p class="exclusive-second-smalltext">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
-                    <a href="#" type="button" class="exclusive-btn button">Order Us <i class="arrow right promo-i"></i></a>
+                    <!-- <i href="#" type="button" class="exclusive-btn button">Order Us <i class="arrow right promo-i"></i></a> -->
+                    <a href="#" class="btn-white btn-exclusive-location">Order Us <img src="../img/arrow-black.svg" alt="arrow-black-svg" class="arrow-black"></a>
                 </div>
             </div>
             <img src="./img/product-2-sm.svg" alt="product-2-sm" class="product-2-sm">
