--- a/test-index.html
+++ b/test-index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="1button.css\dutton.css">
+    <link rel="stylesheet" href="./1txt.css/txt.css">
     <title>Document</title>
 </head>
 <body>
@@ -25,6 +26,23 @@
     <div class="pagination">
         <a href="#" class="circle"></a><a href="#" class="circle circle-active"></a><a href="#" class="circle"></a>
     </div><br>
+    <hr>
+
+    <p class="text-small-gray">Seat and back with upholstery made of cold cure foam.
+       Steel frame, available in matt powder-coated black .
+    </p>
+   <hr>
+   <p class="header-small-color">
+       exclusive
+   </p>
+   <hr>
+    <p class="heading-medium-bold">
+        Fishnet Chair       
+    </p>
+    <hr>
+    <h2 class="heading-big-thin">
+        Fishnet Chair
+    </h2>
     <hr>
 </body>
 </html>
