меняли кнопки и очень много мелких дороботок. так же структуру файлов scc стили разнесены на компоненты и линками заведены но html-структурам

--- a/contact-us/contact-us.html
+++ b/contact-us/contact-us.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" href="../our-products-range/our-products-range.css"> -->
     <!-- <link rel="stylesheet" href="../style.css/style.css"> -->
-    <link rel="stylesheet" href="../header-all.css/header-all.css">
-    <link rel="stylesheet" href="../footer-all.css/footer-all.css">
+    <link rel="stylesheet" href="../style.css/header-all.css/header-all.css">
+    <link rel="stylesheet" href="../style.css/footer-all.css/footer-all.css">
     <link rel="stylesheet" href="../contact-us/contact-us.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap" rel="stylesheet">
     <title>Document</title>
